--- a/src/style/App.css
+++ b/src/style/App.css
@@ -1,4 +1,38 @@
-.App-link {
-  color: #61dafb;
+.grid-container {
+  display: grid;
+  grid-template-rows: repeat(1, 16vw);
+  grid-gap: 10px;
+}
+
+.grid-container > figure{
+  /*background: lime;*/
+  margin: 0;
+  padding: 12px;
+}
+
+.grid_image {
+  width:100%;
+  height:100%;
+}
+
+.grid_item {
+  position: relative;
+  /*   overflow: hidden will prevent the image scaling to exceed the specified width. It will expand on back */
+  overflow: hidden;
+}
+
+.card-wrapper{
+  background: #14c3bd;
+  padding:1rem;
+}
+.card {
+  background: #fff;
+  border-radius: 2px;
+  display: inline-block;
+  position: relative;
+}
+
+.card-3 {
+  box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
 }
 
