--- a/src/style/App.css
+++ b/src/style/App.css
@@ -22,7 +22,7 @@
 }
 
 .card-wrapper{
-  background: #14c3bd;
+  /*background: #14c3bd;*/
   padding:1rem;
 }
 .card {
@@ -36,3 +36,35 @@
   box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
 }
 
+
+/*----------*/
+.tile-grid-container{
+  display: grid;
+  /*grid-template-columns: 200px ;*/
+  height: 90vh;
+  border: 10px solid darkorange;
+  color: black;
+}
+
+.tile-grid-item{
+  background: azure;
+  border: 1px solid darkcyan;
+  padding: 20px;
+
+}
+
+.gi-1{
+
+}
+
+.gi-2{
+
+}
+
+.gi-3{
+
+}
+
+.gi-4{
+
+}
