--- a/src/style/App.scss
+++ b/src/style/App.scss
@@ -54,7 +54,7 @@
 .glitch{
   position: relative;
   color: white;
-  font-size: 4em;
+  //font-size: 4vw;
   letter-spacing: 1px;
   animation: glitch-skew 1s infinite linear alternate-reverse;
 
