--- a/src/style/App.scss
+++ b/src/style/App.scss
@@ -36,7 +36,7 @@
 .card {
   background: #fff;
   border-radius: 2px;
-  display: inline-block;
+  //display: inline-block;
   position: relative;
   display: flex;
   height: 70vh;
